Fix couleur darkmode

--- a/src/app/views/admin/product-list/product-list.component.html
+++ b/src/app/views/admin/product-list/product-list.component.html
@@ -12,7 +12,9 @@
     </div>
   </div>
   <div class="flex justify-center">
-    <table class="table-auto border-collapse border border-gray-400 w-5/6 p-2 md:p-0">
+    <table
+      class="table-auto border-collapse border border-gray-400 w-5/6 p-2 md:p-0 dark:!text-white"
+    >
       <thead>
         <tr>
           <th class="w-2/12 border border-gray-300">Image</th>
