--- a/src/app/views/section-contact/section-contact.component.html
+++ b/src/app/views/section-contact/section-contact.component.html
@@ -3,7 +3,7 @@
   <div class="container" data-aos="fade-up">
     <header class="section-header">
       <h2 [innerText]="resource.contact.title"></h2>
-      <p [innerText]="resource.contact.subtitle"></p>
+      <p class="dark:!text-white" [innerText]="resource.contact.subtitle"></p>
     </header>
 
     <div class="flex justify-center">
