--- a/src/app/views/section-faq/section-faq.component.html
+++ b/src/app/views/section-faq/section-faq.component.html
@@ -3,7 +3,7 @@
   <div class="container" data-aos="flip-down" data-aos-delay="300">
     <header class="section-header">
       <h2 [innerHTML]="resource.faq.title"></h2>
-      <p [innerHTML]="resource.faq.subtitle"></p>
+      <p class="dark:!text-white" [innerHTML]="resource.faq.subtitle"></p>
     </header>
 
     <div class="flex">
