--- a/src/app/views/section-portfolio/section-portfolio.component.html
+++ b/src/app/views/section-portfolio/section-portfolio.component.html
@@ -3,7 +3,7 @@
   <div class="container" data-aos="fade-up">
     <header class="section-header">
       <h2 [innerText]="resource.portfolio.title"></h2>
-      <p [innerText]="resource.portfolio.subtitle"></p>
+      <p class="dark:!text-white" [innerText]="resource.portfolio.subtitle"></p>
     </header>
 
     <div class="flex" data-aos="fade-up" data-aos-delay="100">
