--- a/src/app/views/auth/signin/signin.component.html
+++ b/src/app/views/auth/signin/signin.component.html
@@ -6,7 +6,7 @@
 
 <section class="h-full py-18">
   <div class="flex justify-center">
-    <div class="w-1/2 formStyle">
+    <div class="w-1/2 formStyle space-y-6">
       <div class="flex justify-center">
         <h2 class="styleTitle" [innerText]="resource.signin.title"></h2>
       </div>
