--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 @import 'primeicons/primeicons.css';
+@import 'aos/dist/aos.css';
 
 @custom-variant dark (&:where(.dark, .dark *));
 
