--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -146,6 +146,10 @@ p-breadcrumb {
   }
 }
 
+.underline-line {
+  text-decoration: underline !important; /* !important pour écraser d’autres règles */
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
