Product ok RAF ressources

--- a/src/app/Shared/Component/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/Shared/Component/breadcrumbs/breadcrumbs.component.html
@@ -1,4 +1,4 @@
-<p-breadcrumb [model]="items" [home]="home">
+<p-breadcrumb [model]="items">
   <ng-template #item let-item>
     <a
       class="cursor-pointer"
