--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1134,7 +1134,7 @@ p-breadcrumb {
   background-color: #4154f1;
 }
 .portfolio-details .portfolio-info {
-  padding: 30px;
+  padding: 2rem;
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
 }
 .portfolio-details .portfolio-info h3 {
@@ -1153,7 +1153,7 @@ p-breadcrumb {
   margin-top: 10px;
 }
 .portfolio-details .portfolio-description {
-  padding-top: 30px;
+  padding: 2rem;
 }
 .portfolio-details .portfolio-description h2 {
   font-size: 26px;
@@ -2486,5 +2486,25 @@ html.dark {
     text-decoration: underline;
     color: #ffffff;
     text-align: center;
+  }
+
+  .p-floatlabel-on label {
+    background-color: #1f2937 !important;
+    color: #ffffff !important;
+  }
+
+  .p-inputgroupaddon,
+  .p-datepicker-dropdown,
+  .p-chip,
+  .p-chip-remove-icon,
+  .p-multiselect-overlay,
+  .p-multiselect-option {
+    background-color: #374151 !important;
+    color: #ffffff !important;
+  }
+
+  .p-inputnumber-button {
+    background-color: transparent;
+    color: #94a3b8;
   }
 }
