--- a/src/app/views/admin/product/product-list/product-list.component.html
+++ b/src/app/views/admin/product/product-list/product-list.component.html
@@ -9,7 +9,7 @@
     <div class="w-8/12 flex justify-center">
       <button
         class="w-10/12 md:w-4/12 mx-auto bg-blue-600 text-white font-semibold px-6 py-2 rounded hover:bg-blue-700 transition"
-        (click)="onNewProduct()"
+        (click)="onNew()"
         [innerText]="resource.generic.new_m | format: resource.product.title"
       ></button>
     </div>
